--- a/index.html
+++ b/index.html
@@ -4,11 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shrinking Circle Physics</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<styles>
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: black;
+}
+
+canvas {
+    border: 3px solid white;
+    display: none; /* Скрываем до нажатия кнопки */
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    background: yellow;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+</styles>
+    
     <button id="startButton">Начать</button>
     <canvas id="gameCanvas"></canvas>
-    <script src="script.js"></script>
+    <script>
+        const canvas = document.getElementById("gameCanvas");
+const ctx = canvas.getContext("2d");
+const startButton = document.getElementById("startButton");
+
+canvas.width = 800;
+canvas.height = 600;
+
+let gameStarted = false;
+
+// Настройки круга
+let bigRadius = 200;
+const bigCenter = { x: canvas.width / 2, y: canvas.height / 2 };
+const smallRadius = 20;
+let ballColor = "blue";
+
+// Начальные параметры мяча
+let angle = Math.random() * Math.PI * 2;
+let speed = 3;
+let smallX = bigCenter.x + bigRadius * 0.5 * Math.cos(angle);
+let smallY = bigCenter.y + bigRadius * 0.5 * Math.sin(angle);
+let velX = speed * Math.cos(angle);
+let velY = speed * Math.sin(angle);
+const gravity = 0.2;
+
+// Функция для случайного цвета
+function randomColor() {
+    return `rgb(${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() * 255})`;
+}
+
+// Игровой цикл
+function update() {
+    if (!gameStarted) return;
+
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // Применяем гравитацию
+    velY += gravity;
+    smallX += velX;
+    smallY += velY;
+
+    // Проверка столкновения
+    let distX = smallX - bigCenter.x;
+    let distY = smallY - bigCenter.y;
+    let distance = Math.sqrt(distX ** 2 + distY ** 2);
+
+    if (distance + smallRadius >= bigRadius) {
+        ballColor = randomColor();
+        bigRadius -= 3;
+        if (bigRadius < 20) bigRadius = 20;
+
+        let normX = distX / distance;
+        let normY = distY / distance;
+        let dotProduct = velX * normX + velY * normY;
+        velX -= 2 * dotProduct * normX;
+        velY -= 2 * dotProduct * normY;
+
+        smallX = bigCenter.x + (bigRadius - smallRadius - 1) * normX;
+        smallY = bigCenter.y + (bigRadius - smallRadius - 1) * normY;
+    }
+
+    // Рисуем большой круг
+    ctx.beginPath();
+    ctx.arc(bigCenter.x, bigCenter.y, bigRadius, 0, Math.PI * 2);
+    ctx.strokeStyle = "white";
+    ctx.lineWidth = 3;
+    ctx.stroke();
+
+    // Рисуем маленький мяч
+    ctx.beginPath();
+    ctx.arc(smallX, smallY, smallRadius, 0, Math.PI * 2);
+    ctx.fillStyle = ballColor;
+    ctx.fill();
+
+    requestAnimationFrame(update);
+}
+
+// Запуск игры при нажатии кнопки
+startButton.addEventListener("click", () => {
+    gameStarted = true;
+    startButton.style.display = "none"; // Скрываем кнопку
+    canvas.style.display = "block"; // Показываем канвас
+    update();
+});
+
+    </script>
 </body>
 </html>
