--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
             align-items: center;
             height: 100vh;
             background-color: black;
-            overflow: hidden;
         }
 
         canvas {
             border: 3px solid white;
-            display: none;
+            display: none; /* Скрываем до нажатия кнопки */
             width: 90vw;
             height: 80vh;
             max-width: 800px;
@@ -31,19 +30,18 @@
         }
 
         button {
-            padding: 15px 25px;
-            font-size: 24px;
+            padding: 10px 20px;
+            font-size: 20px;
             cursor: pointer;
             background: yellow;
             border: none;
-            border-radius: 10px;
-            font-weight: bold;
+            border-radius: 5px;
             margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <button id="startButton">🎮 НАЧАТЬ</button>
+    <button id="startButton">НАЧАТЬ</button>
     <canvas id="gameCanvas"></canvas>
 
     <script>
@@ -59,75 +57,12 @@
         window.addEventListener("resize", resizeCanvas);
 
         let gameStarted = false;
-        let bigRadius = Math.min(canvas.width, canvas.height) / 3;
-        const bigCenter = { x: canvas.width / 2, y: canvas.height / 2 };
-        const smallRadius = Math.min(canvas.width, canvas.height) / 20;
-        let ballColor = "blue";
 
-        let angle = Math.random() * Math.PI * 2;
-        let speed = 3;
-        let smallX = bigCenter.x + bigRadius * 0.5 * Math.cos(angle);
-        let smallY = bigCenter.y + bigRadius * 0.5 * Math.sin(angle);
-        let velX = speed * Math.cos(angle);
-        let velY = speed * Math.sin(angle);
-        const gravity = 0.2;
-
-        function randomColor() {
-            return `rgb(${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() * 255})`;
-        }
-
-        function update() {
-            if (!gameStarted) return;
-
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            velY += gravity;
-            smallX += velX;
-            smallY += velY;
-
-            let distX = smallX - bigCenter.x;
-            let distY = smallY - bigCenter.y;
-            let distance = Math.sqrt(distX ** 2 + distY ** 2);
-
-            if (distance + smallRadius >= bigRadius) {
-                ballColor = randomColor();
-                bigRadius -= 3;
-                if (bigRadius < smallRadius * 2) bigRadius = smallRadius * 2;
-
-                let normX = distX / distance;
-                let normY = distY / distance;
-                let dotProduct = velX * normX + velY * normY;
-                velX -= 2 * dotProduct * normX;
-                velY -= 2 * dotProduct * normY;
-
-                smallX = bigCenter.x + (bigRadius - smallRadius - 1) * normX;
-                smallY = bigCenter.y + (bigRadius - smallRadius - 1) * normY;
-            }
-
-            ctx.beginPath();
-            ctx.arc(bigCenter.x, bigCenter.y, bigRadius, 0, Math.PI * 2);
-            ctx.strokeStyle = "white";
-            ctx.lineWidth = 3;
-            ctx.stroke();
-
-            ctx.beginPath();
-            ctx.arc(smallX, smallY, smallRadius, 0, Math.PI * 2);
-            ctx.fillStyle = ballColor;
-            ctx.fill();
-
-            requestAnimationFrame(update);
-        }
-
-        startButton.addEventListener("click", startGame);
-        startButton.addEventListener("touchstart", startGame);
-
-        function startGame() {
-            if (gameStarted) return;
+        startButton.addEventListener("click", () => {
             gameStarted = true;
             startButton.style.display = "none";
             canvas.style.display = "block";
-            update();
-        }
+        });
     </script>
 </body>
 </html>
