--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
     </style>
 </head>
 <body>
+    <h1>by Mortis PRO</h1>
     <button id="startButton">🎮 НАЧАТЬ</button>
     <canvas id="gameCanvas"></canvas>
+        <h1>Подпишись на мой канал</h1>
+    <a>https://www.youtube.com/@MortisCoder/shorts</a>
 
     <script>
         const canvas = document.getElementById("gameCanvas");
